# queryboost

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/queryboost/: __init__.py  auth.py  queryboost.py  stream.py
src/queryboost/config/: __init__.py  config.py
src/queryboost/exceptions/: __init__.py  exceptions.py
src/queryboost/handlers/: __init__.py  base.py  local.py  s3.py
src/queryboost/types/: __init__.py
src/queryboost/utils/: __init__.py  data.py  prompt.py
tests/: conftest.py  test_auth.py  test_base_handler.py  test_config.py  test_data.py  test_exceptions.py  test_handlers.py  test_local_handler.py  test_prompt.py  test_queryboost.py  test_s3_handler.py  test_stream.py
